# instructions

./: .env  .gitignore  DEVELOPMENT.md  README.md  import_category_with_definition.py  manage.py  pyproject.toml  pyvenv.cfg  ruff.toml  run_ruff.sh  test_ruff_config.py  verify_coto_data.py  verify_data.py  verify_definition_association.py
content/: admin.py  models.py  serializers.py  urls.py  views.py
content/data/: level1.json
content/fixtures/: README.md  category_coto_fixture.json  category_fixture.json
content/management/commands/: load_init_data.py
content/migrations/: 0001_initial.py  0002_alter_category_create_time_alter_content_create_time_and_more.py  0002_remove_content_document_type_remove_content_file_and_more.py  0003_alter_category_update_time_alter_content_update_time_and_more.py  0003_content_content_con_code_a3c4b2_idx_and_more.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_attrdefinitionmodel_create_time.py  0002_attrdefinitionmodel_attr_label_and_more.py  0003_alter_attrdefinitionmodel_update_time.py  0003_remove_attrdefinitionmodel_attr_type_and_more.py
core/register/: __init__.py
instructions/: asgi.py  rest_framework_settings.py  settings.py  urls.py  wsgi.py
instructions/core/: models.py
instructions/instructions/: urls.py  wsgi.py
utils/: manage.py
