[project]
name = "instructions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "psycopg2-binary>=2.9.10",
]


[tool.uv]
allow-insecure-host = ["pypi.tuna.tsinghua.edu.cn"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
dev = "manage:main"